Added and centered the first image

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -5,19 +5,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <link rel="stylesheet" href="../css/homePage.css">
+        <title>Rabbit Society</title>
     </head>
     <body>
-        <nav class="navbar">
-            <div class="nav-left">
-                d
+        <header>
+            <nav class="navbar">
+                <div class="nav-left">
+                    <a href="./homePage.html"><img src="../photos/rabbit.jpg" alt="nav logo" class="nav-logo"></a>
+                </div>
+                <div class="nav-right">
+                    <ul class="nav-list">
+                        <li><a href="" class="nav-links">About</a></li>
+                        <li><a href="" class="nav-links">Breeds</a></li>
+                        <li><a href="" class="nav-links">Care</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div class="ron">
+                <div class="pic-container">
+                    <img src="../photos/page-img.jpeg" alt="" class="page-img">
+                </div>
             </div>
-            <div class="nav-right">
-                <ul class="nav-list">
-                    <li><a href="" class="nav-links">About</a></li>
-                    <li><a href="">Breeds</a></li>
-                    <li><a href="">Care</a></li>
-                </ul>
-            </div>
-        </nav>
+        </main>
     </body>
 </html>
