Added margin pic

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -26,8 +26,10 @@
             <div class="ron">
                 <div class="pic-container">
                     <img src="../photos/page-img.jpeg" alt="" class="page-img">
+                    <p>Here for the rabbit lovers of the world.</p>
                 </div>
             </div>
+
         </main>
     </body>
 </html>
